src/test/resources/plang-strict/passing/003_vardecl_more_lines.plang
**#Variable declaration and assignments
**Memory:a=Integer(10),b=Integer(5)
program Vardecl
  Változók:
    a: Egész,
    b: egész
  a := 10
  b := 5
program_vége
