src/test/resources/plang-strict/parse-error/015_typename_as_varname.plang
**#Semantic error: name already in use as typename.
**FirstErrorLoc:5,5
program vardecl_nameclash
  Változók:
    egész: Egész
  egész := 1
program_vége
